ansible/roles/config_router/templates/iptables
# Generated by iptables-save v1.8.8 (nf_tables) on Sun Apr  2 22:07:19 2023
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i eth0 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A FORWARD -i eth1 -o eth0 -j ACCEPT
COMMIT
# Completed on Sun Apr  2 22:07:19 2023
# Generated by iptables-save v1.8.8 (nf_tables) on Sun Apr  2 22:07:19 2023
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.56.11:8080
-A POSTROUTING -d 192.168.56.11/32 -p tcp -m tcp --dport 8080 -j SNAT --to-source 192.168.56.10
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Sun Apr  2 22:07:19 2023
